# INF3173_TP2

./: README.md
inf3173-243-tp2-etudiant-v2/: .gitignore  CMakeLists.txt  README.md  remise.py
inf3173-243-tp2-etudiant-v2/src/: CMakeLists.txt  crc32.cpp  crc32.h  crc32.hpp  cwalk.c  finddup.c  finddup_fread.c  finddup_fread.h  finddup_main.c  finddup_main.h  finddup_mmap.c  finddup_mmap.h  finddup_read.c  finddup_read.h  finddup_simple.c  finddup_simple.h  genfiles.c  hashmap.c  hashmap.h  list.c  list.h  utils.c  utils.h
inf3173-243-tp2-etudiant-v2/test/: CMakeLists.txt  bench_finddup.cpp  test_base.cpp  test_finddup.cpp  testutils.cpp  testutils.h  wrapper.c  wrapper.h
inf3173-243-tp2-etudiant-v2/test/data/: source.deps
